--- a/app/src/main/res/layout/fragment_game_finished.xml
+++ b/app/src/main/res/layout/fragment_game_finished.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <data>
+        <variable
+            name="gameResult"
+            type="com.example.brainstorm.domain.entity.GameResult"
+            />
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -26,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="@string/required_score"
+            android:text="@{gameResult.gameSettings.minCountOfRightAnswersString}"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +44,7 @@
             android:id="@+id/tv_score_answers"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/score_answers"
+            android:text="@{gameResult.countOfRightAnswersString}"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
             app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
@@ -50,7 +56,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/required_percentage"
+            android:text="@{gameResult.gameSettings.minPercentOfRightAnswersString}"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
             app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
@@ -63,7 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/score_percentage"
+            android:text=""
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
